--- a/css/people.css
+++ b/css/people.css
@@ -336,7 +336,7 @@
 
 .friends__users>p:first-child span {
     color: var(--else-text-color-50);
-    margin-left: 1rem; 
+    margin-left: 1rem;
 }
 
 .friend-buttons-div {
@@ -770,6 +770,87 @@
     position: absolute;
     top: 1.1rem;
     left: 2.1rem;
+}
+
+.friends-title {
+        color: var(--else-text-color-50);
+        margin-bottom: 1.6rem;
+}
+
+.users-requests {
+    margin-bottom: 2.6rem;
+    display: flex;
+    gap: 1rem;
+    color: var(--main-accent-color);
+}
+
+.users-requests img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.request-from-user {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    cursor: pointer;
+    background-color: var(--block-accent-color-210);
+    box-shadow: var(--shadow-small);
+    padding: 1rem 1.6rem;
+    border-radius: 2rem;
+}
+
+.only-user-info {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.request-from-user .user-info {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+}
+
+.request-from-user .user-info p:first-child {
+    font-size: var(--font-size-2);
+    font-weight: 600;
+}
+
+.request-from-user .user-info p:last-child {
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
+}
+
+.request-from-user svg {
+    fill: var(--else-text-color-50);
+    margin-left: 1.6rem;
+}
+
+.answer-to-requests {
+    display: flex;
+    gap: 0.4rem;
+    font-size: var(--font-size-1);
+}
+
+.answer-to-requests-li {
+    color: var(--block-color);
+    background-color: var(--main-accent-color);
+    padding: 1rem 1.6rem;
+    border-radius: 1rem;
+    transition: 0.2s;
+}
+
+.answer-to-requests-li.unrequest {
+    background-color: transparent;
+    color: var(--main-accent-color);
+    border: 1px solid var(--main-accent-color);
+}
+
+.answer-to-requests-li:hover {
+    opacity: 80%;
 }
 
 @media (max-width: 1320px) {
