--- a/css/people.css
+++ b/css/people.css
@@ -831,26 +831,64 @@
 
 .answer-to-requests {
     display: flex;
+    position: relative;
     gap: 0.4rem;
     font-size: var(--font-size-1);
 }
 
 .answer-to-requests-li {
+    display: flex;
+    gap: 0.625rem;
+    align-items: center;
+    justify-content: center;
     color: var(--block-color);
     background-color: var(--main-accent-color);
     padding: 1rem 1.6rem;
     border-radius: 1rem;
     transition: 0.2s;
+    min-width: max-content;
+    width: 100%;
 }
 
 .answer-to-requests-li.unrequest {
     background-color: transparent;
     color: var(--main-accent-color);
-    border: 1px solid var(--main-accent-color);
+    border: 1px solid var(--else-text-color-50);
+    padding: 0;
+    min-width: 3.3rem;
+    min-height: 3.3rem;
+    max-width: 3.3rem;
+    transition: 0.2s;
+}
+
+.answer-to-requests-li.unrequest:hover {
+    transition: 0.2s;
+    border: 1px solid var(--error-accent-color);
+}
+
+.answer-to-requests-li.unrequest svg {
+    fill: var(--else-text-color-50);
+    margin: 0;
+    width: 10px;
+    height: 10px;
+    transition: 0.2s;
+}
+
+.answer-to-requests-li.unrequest:hover svg {
+    transition: 0.2s;
+    fill: var(--error-accent-color);
 }
 
 .answer-to-requests-li:hover {
     opacity: 80%;
+}
+
+.answer-to-requests-li.request svg {
+    fill: transparent;
+    stroke: var(--block-color);
+    margin: 0;
+    width: 13px;
+    height: 10px;
 }
 
 @media (max-width: 1320px) {
