ui things on wall, backend bugs

--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@
     --else-accent-color-2: #F7D488;
     --error-accent-color: #FF220C;
     --block-accent-color-110: #E6E6E6;
-    --block-accent-color-06: #02020206;
+    --block-accent-color-06: #F0F0F0;
     --block-accent-color-210: #31A05E10;
     --like-button-accent-color: #FF220C10;
     --like-button-hover-color: #FF220C14;
