--- a/css/people.css
+++ b/css/people.css
@@ -547,13 +547,8 @@
 .people-filter__choice {
     display: flex;
     align-items: center;
-    gap: 0.39rem;
-    background-color: var(--block-color);
-    min-height: 4rem;
-    border-radius: 2rem;
-    overflow: hidden;
-    margin-top: 1.6rem;
-    padding: 0.39rem;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .people-filter-popup-li {
@@ -562,16 +557,22 @@
     text-transform: none;
     display: -webkit-flex;
     display: flex;
-    -webkit-align-items: center;
-    align-items: center;
+    flex-direction: column;
     justify-content: center;
     color: var(--else-text-color-50);
     cursor: pointer;
     transition: 0.2s;
-    border-radius: 2rem;
-    min-height: calc(4rem - 0.39rem*2);
-    padding: 0 1.6rem;
+    border-radius: 1rem;
+    padding: 1rem 1.6rem;
+    font-size: var(--font-size-2);
+    gap: 0.39rem;
+    font-weight: 600;
+}
+
+.people-filter-popup-li span {
+    font-weight: 400;
     font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
 }
 
 .people-filter-popup-li:hover {
@@ -585,11 +586,7 @@
 .people-filter-popup-li:has([type='radio']:checked) {
     color: var(--main-accent-color);
     background-color: var(--block-accent-color-210);
-}
-
-.first-part:has(#people-filter-all:checked)+.second-and-third-parts #users-filter-all,
-.first-part:has(#people-filter-top:checked)+.second-and-third-parts #users-filter-top {
-    display: block;
+    box-shadow: var(--shadow-small);
 }
 
 .people-filter-mobile {
@@ -747,14 +744,38 @@
 }
 
 .user-in-top {
-    background-color: var(--block-color);
-    box-shadow: var(--shadow-small);
-    padding: 1.6rem 2.6rem;
-    border-radius: 2rem;
-    cursor: pointer;
+    margin-top: 2.6rem;
+}
+
+.user-in-top-info {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    padding: 1rem 1.6rem;
+    background-color: var(--block-color);
+    border-radius: 1rem;
+    box-shadow: var(--shadow-small);
+    font-size: var(--font-size-2);
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.user-in-top-info svg {
+    fill: var(--else-text-color-50);
+    opacity: 1;
+    transition: 0.2s;
+    margin-left: auto;
+    min-height: 11px;
+    max-height: 11px;
+}
+
+.user-in-top-info:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.user-in-top-info>div {
+    gap: 0.39rem;
+    display: flex;
+    flex-direction: column;
 }
 
 .user-in-top.mobile {
@@ -762,7 +783,17 @@
     display: none;
 }
 
-.user-in-top span {
+.user-in-top span:first-child {
+    max-width: max-content;
+    background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.user-in-top span:last-child {
+    font-weight: 400;
+    font-size: var(--font-size-1);
     color: var(--else-text-color-50);
 }
 
@@ -773,8 +804,8 @@
 }
 
 .friends-title {
-        color: var(--else-text-color-50);
-        margin-bottom: 1.6rem;
+    color: var(--else-text-color-50);
+    margin-bottom: 1.6rem;
 }
 
 .users-requests {
@@ -890,6 +921,22 @@
     width: 13px;
     height: 10px;
 }
+
+.people__top-users>p:first-child,
+.people__users>p:first-child {
+    font-size: var(--font-size-4);
+    font-weight: 600;
+    margin-bottom: 2.6rem;
+}
+
+.people__users>p:first-child span {
+    color: var(--else-text-color-50);
+    margin-left: 1rem;
+}
+/* 
+.third-part>div {
+    margin-top: calc(3.2rem + 2.6rem);
+} */
 
 @media (max-width: 1320px) {
     .third-part {
