--- a/css/people.css
+++ b/css/people.css
@@ -812,7 +812,7 @@
     margin-bottom: 2.6rem;
     display: flex;
     gap: 1rem;
-    color: var(--main-accent-color);
+    color: var(--main-text-color);
 }
 
 .users-requests img {
@@ -826,8 +826,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    cursor: pointer;
-    background-color: var(--block-accent-color-210);
+    background-color: var(--block-color);
     box-shadow: var(--shadow-small);
     padding: 1rem 1.6rem;
     border-radius: 2rem;
@@ -872,51 +871,38 @@
     gap: 0.625rem;
     align-items: center;
     justify-content: center;
-    color: var(--block-color);
-    background-color: var(--main-accent-color);
+    color: var(--main-accent-color);
+    background-color: var(--block-accent-color-210);
     padding: 1rem 1.6rem;
     border-radius: 1rem;
     transition: 0.2s;
     min-width: max-content;
     width: 100%;
+    cursor: pointer;
 }
 
 .answer-to-requests-li.unrequest {
-    background-color: transparent;
-    color: var(--main-accent-color);
-    border: 1px solid var(--else-text-color-50);
+    background-color: var(--like-button-accent-color);
     padding: 0;
     min-width: 3.3rem;
     min-height: 3.3rem;
     max-width: 3.3rem;
-    transition: 0.2s;
-}
-
-.answer-to-requests-li.unrequest:hover {
-    transition: 0.2s;
-    border: 1px solid var(--error-accent-color);
 }
 
 .answer-to-requests-li.unrequest svg {
-    fill: var(--else-text-color-50);
+    fill: var(--error-accent-color);
     margin: 0;
     width: 10px;
     height: 10px;
-    transition: 0.2s;
 }
 
-.answer-to-requests-li.unrequest:hover svg {
-    transition: 0.2s;
-    fill: var(--error-accent-color);
-}
-
-.answer-to-requests-li.request:hover {
+.answer-to-requests-li:hover {
     opacity: 80%;
 }
 
 .answer-to-requests-li.request svg {
     fill: transparent;
-    stroke: var(--block-color);
+    stroke: var(--main-accent-color);
     margin: 0;
     width: 13px;
     height: 10px;
@@ -933,10 +919,67 @@
     color: var(--else-text-color-50);
     margin-left: 1rem;
 }
-/* 
-.third-part>div {
-    margin-top: calc(3.2rem + 2.6rem);
-} */
+
+.see-all-requests {
+    background-color: var(--block-color);
+    border-radius: 2rem;
+    box-shadow: var(--shadow-small);
+    padding: 1rem 1.6rem;
+    font-size: var(--font-size-2);
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    transition: 0.2s;
+    gap: 4.1rem;
+    color: var(--main-accent-color);
+}
+
+.see-all-requests:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.see-all-requests span {
+    font-size: var(--font-size-1);
+    font-weight: 400;
+    color: var(--else-text-color-50);
+}
+
+.see-all-requests svg {
+    fill: var(--else-text-color-50);
+    align-self: center;
+}
+
+.see-all-requests>div {
+    display: flex;
+    flex-direction: column;
+    gap: 0.39rem;
+}
+
+.see-all-requests-icon-div {
+    background-color: transparent;
+    align-self: center;
+    padding: 1rem 1.6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 1rem;
+    cursor: pointer;
+    transition: 0.2s;
+    font-size: var(--font-size-2);
+    color: var(--else-text-color-50);
+    gap: 0.625rem;
+}
+
+.see-all-requests-icon-div:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.see-all-requests-icon {
+    fill: var(--else-text-color-50);
+    margin: 0;
+    width: 10px;
+    height: 10px;
+}
 
 @media (max-width: 1320px) {
     .third-part {
